--- a/src/pages/url-edit.ejs
+++ b/src/pages/url-edit.ejs
@@ -25,9 +25,9 @@
 
                 <div>
                     <label for="type" class="block text-sm font-medium leading-6 text-gray-900">Type:</label>
-                    <select name="type" id="urlType" value="<%= url.type %>" onchange="selectType()" class="mt-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                        <option value="P" selected>Permanent</option>
-                        <option value="T">Temporary</option>
+                    <select name="type" id="urlType" onchange="selectType()" class="mt-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                        <option value="P" <%= url.type === "P" ? "selected" : "" %>>Permanent</option>
+                        <option value="T" <%= url.type === "T" ? "selected" : "" %> >Temporary</option>
                         <% if(url.visits < 1) { %>
                             <option value="OT">One-time</option>
                         <% } %>
@@ -36,7 +36,13 @@
 
                 <div id="expirationDate__container" class="hidden">
                     <label for="expirationDate" class="block text-sm font-medium leading-6 text-gray-900">Expiration date:</label>
-                    <input id="expirationDate" name="expirationDate" type="date" value="<%= url.expirationDate %>" min="<%= new Date().toISOString().split("T")[0]   %>" class="mt-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" disabled>
+                    <input id="expirationDate" name="expirationDate" type="date" value="<%= (function() {
+                        if(url.type === 'T') {
+                            return new Date(url.expirationDate).toISOString().split('T')[0];
+                        } else {
+                            return new Date().toISOString().split('T')[0];
+                        }
+                    })()  %>" class="mt-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" disabled>
                 </div>
 
                 <div id="code__container">
