Create a sign-up page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -710,8 +710,32 @@ select {
   white-space: nowrap;
   border-width: 0;
 }
+.absolute {
+  position: absolute;
+}
 .relative {
   position: relative;
+}
+.left-5 {
+  left: 1.25rem;
+}
+.top-0 {
+  top: 0px;
+}
+.right-5 {
+  right: 1.25rem;
+}
+.top-1 {
+  top: 0.25rem;
+}
+.top-2 {
+  top: 0.5rem;
+}
+.right-3 {
+  right: 0.75rem;
+}
+.bottom-0 {
+  bottom: 0px;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
@@ -937,6 +961,10 @@ select {
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -954,6 +982,9 @@ select {
 }
 .leading-7 {
   line-height: 1.75rem;
+}
+.leading-9 {
+  line-height: 2.25rem;
 }
 .tracking-tight {
   letter-spacing: -0.025em;
