--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -181,7 +181,8 @@
             if (response.ok) {
                 window.location.reload();
             } else {
-                alert('Failed to create URL');
+                const data = await response.json();
+                alert(data.message);
             }
         });
     </script>
