--- a/src/pages/admin.ejs
+++ b/src/pages/admin.ejs
@@ -4,45 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Admin Page</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="/stylesheets/main.css" rel="stylesheet">
     </style>
 </head>
-<body>
-    <h1>Users Page</h1>
-    <section>
-        <h2>Create a New User</h2>
-        <form id="new-user-form" action="">
-            <div>
-                <label for="name">Name:</label>
-                <input type="text" name="name" id="name" required>
-            </div>
-            <div>
-                <label for="email">Email:</label>
-                <input type="email" name="email" id="email" required>
-            </div>
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password" required>
-            </div>
-            <div>
-                <input type="submit" value="Submit">
-            </div>
-        </form>
-    </section>
-    <section>
-        <h2>List of Users</h2>
-        <div class="users--container">
-            <% for (let user of users){%>
-                <div class="users__item">
-                 <h4 style="margin-bottom: 0;">
-                     <%= user.name %>
-                 </h4>
-                 <p style="margin-top: 5px;">
-                     <%= user.email %>
-                 </p>
-                </div>
-             <% }%>
+<body class="h-full">
+    <div class="flex min-h-full flex-col justify-start px-6 py-12 lg:px-8">
+        <div class="flex justify-between">
+            <h2 class="text-base font-semibold leading-7 text-gray-900">List of Users</h2>
+            <button id="new-user-btn" type="button" class="inline-flex items-center px-3 py-1.5 border border-transparent text-xs font-semibold rounded-md text-white bg-indigo-500 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                Create a new user
+            </button>
         </div>
-    </section>
+        
+        <ul role="list" class="divide-y divide-grey-100">
+            <% for (let user of users){%>
+                <li class="flex justify-between gap-x-6 py-5">
+                    <div class="flex min-w-0 gap-x-4">
+                      <div class="min-w-0 flex-auto">
+                        <p class="text-sm font-semibold leading-6 text-gray-900"><%= user.firstName %> <%= user.lastName %></p>
+                        <p class="text-sm leading-6 text-gray-900">Co-Founder / CEO</p>
+                        <p class="mt-1 truncate text-xs leading-5 text-gray-500"><%= user.email %> </p>
+                      </div>
+                    </div>
+                    <div class="shrink-0 flex flex-col items-end">
+                        <button id="delete-user-btn" onclick="deleteUser('<%= user.id %>')" type="button" title="Delete a user" class="material-symbols-outlined inline-flex items-center px-3 py-1.5 border border-transparent text-xs rounded-md text-indigo-600 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                            close
+                        </button>
+                    </div>
+                  </li>
+             <% }%>
+        </ul>
+    </div> 
+    <script>
+        async function  deleteUser(userTd) {
+            const response = await fetch(`/api/users/${userTd}`, {
+                method: 'DELETE',
+            });
+
+            if (!response.ok) {
+                alert('Failed to delete User');
+            }
+        }
+    </script>
 </body>
 </html>
