--- a/src/pages/sign-in.ejs
+++ b/src/pages/sign-in.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Sign in Page</title>
     <link href="/stylesheets/main.css" rel="stylesheet">
 </head>
 <body class="h-full">
