--- a/src/pages/sign-up.ejs
+++ b/src/pages/sign-up.ejs
@@ -97,7 +97,7 @@
         if (response.ok) {
           window.location = '/sign-in';
         } else {
-          alert('Failed to create URL');
+          alert('Failed to create Userß');
         }
       });
     </script>
