--- a/src/pages/admin-create.ejs
+++ b/src/pages/admin-create.ejs
@@ -50,13 +50,22 @@
               
             </div>
       
-            <div>
-              <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign up</button>
-            </div>
+            <div class="flex flex-col sm:flex-row justify-between gap-2">
+              <button type="submit" class="w-full px-4 py-2 bg-indigo-600 text-white font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:bg-indigo-700">
+                  Create
+              </button>
+              <button type="button" onclick="redirectBack()" class="w-full full px-4 py-2 border border-indigo-600 text-indigo-600 font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:text-white hover:border hover:border-indigo-700 hover:bg-indigo-700">
+                  Back
+              </button>
+          </div>
           </form> 
         </div>
     </div>
     <script>
+      function redirectBack() {
+        window.location.href = '/admin';
+      }
+
       const passwordVisibility = document.getElementById('password-visibility');
 
       passwordVisibility.addEventListener('click', () => {
@@ -95,9 +104,10 @@
         });
 
         if (response.ok) {
-          window.location = '/sign-in';
+          window.location = '/admin';
         } else {
-          alert('Failed to create URL');
+          const { error } = await response.json();
+          alert(`Failed to create User: ${error}`);
         }
       });
     </script>
