--- a/src/pages/admin.ejs
+++ b/src/pages/admin.ejs
@@ -12,24 +12,23 @@
 <body class="h-full">
     <div class="flex min-h-full flex-col justify-start px-6 py-12 lg:px-8">
         <div class="flex justify-between">
-            <h2 class="text-base font-semibold leading-7 text-gray-900">List of Users</h2>
+            <h2 class="text-xl font-semibold leading-7 text-gray-900">List of Users</h2>
             <button id="new-user-btn" type="button" class="inline-flex items-center px-3 py-1.5 border border-transparent text-xs font-semibold rounded-md text-white bg-indigo-500 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                 Create a new user
             </button>
         </div>
         
-        <ul role="list" class="divide-y divide-grey-100">
+        <ul role="list" class="divide-y divide-grey-100 mt-5">
             <% for (let user of users){%>
                 <li class="flex justify-between gap-x-6 py-5">
                     <div class="flex min-w-0 gap-x-4">
                       <div class="min-w-0 flex-auto">
                         <p class="text-sm font-semibold leading-6 text-gray-900"><%= user.firstName %> <%= user.lastName %></p>
-                        <p class="text-sm leading-6 text-gray-900">Co-Founder / CEO</p>
                         <p class="mt-1 truncate text-xs leading-5 text-gray-500"><%= user.email %> </p>
                       </div>
                     </div>
                     <div class="shrink-0 flex flex-col items-end">
-                        <button id="delete-user-btn" onclick="deleteUser('<%= user.id %>')" type="button" title="Delete a user" class="material-symbols-outlined inline-flex items-center px-3 py-1.5 border border-transparent text-xs rounded-md text-indigo-600 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                        <button id="delete-user-btn" onclick="deleteUser('<%= user.id %>')" type="button" title="Delete a user" class="material-symbols-outlined inline-flex items-center px-3 py-1.5 border border-transparent text-xs rounded-md text-red-600 bg-red-100 hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
                             close
                         </button>
                     </div>
