--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -761,6 +761,9 @@ select {
 .mt-5 {
   margin-top: 1.25rem;
 }
+.mt-0 {
+  margin-top: 0px;
+}
 .block {
   display: block;
 }
@@ -830,6 +833,9 @@ select {
 .grid-rows-2 {
   grid-template-rows: repeat(2, minmax(0, 1fr));
 }
+.flex-row {
+  flex-direction: row;
+}
 .flex-col {
   flex-direction: column;
 }
@@ -880,6 +886,9 @@ select {
 }
 .gap-10 {
   gap: 2.5rem;
+}
+.gap-5 {
+  gap: 1.25rem;
 }
 .gap-x-4 {
   -moz-column-gap: 1rem;
@@ -1390,6 +1399,14 @@ select {
 
   .sm\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .sm\:gap-0 {
+    gap: 0px;
+  }
+
+  .sm\:gap-1 {
+    gap: 0.25rem;
   }
 
   .sm\:py-32 {
