--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -809,6 +809,9 @@ select {
 .min-w-full {
   min-width: 100%;
 }
+.min-w-16 {
+  min-width: 4rem;
+}
 .flex-auto {
   flex: 1 1 auto;
 }
@@ -1397,6 +1400,10 @@ select {
     align-items: flex-end;
   }
 
+  .sm\:justify-end {
+    justify-content: flex-end;
+  }
+
   .sm\:gap-6 {
     gap: 1.5rem;
   }
@@ -1407,6 +1414,18 @@ select {
 
   .sm\:gap-1 {
     gap: 0.25rem;
+  }
+
+  .sm\:gap-3 {
+    gap: 0.75rem;
+  }
+
+  .sm\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .sm\:gap-20 {
+    gap: 5rem;
   }
 
   .sm\:py-32 {
