--- a/src/pages/admin.ejs
+++ b/src/pages/admin.ejs
@@ -62,7 +62,7 @@
                                 <% const t = new Date(); %>
                                 <% t.setSeconds(t.getSeconds() + value.ttl); %>
                                 <p class="text-sm font-semibold leading-6 text-gray-900"><%= key %></p>
-                                <p class="mt-1 truncate text-xs leading-5 text-gray-500">rate: <%= value.value %>, ttl: <%= value.ttl %>s</p>
+                                <p class="mt-1 truncate text-xs leading-5 text-gray-500">Rate: <%= value.value %>/<%= maxRateLimit %>, TTL: <%= value.ttl %>s</p>
                                 <p class="mt-1 truncate text-xs leading-5 text-gray-500">Expires on <%= t %></p>
                             </div>
                             </div>
