Update dashboard page logic

--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body class="h-full">
+    <header>
+        <%- include('./partials/header'); %>
+    </header>
     <div class="flex min-h-full flex-col justify-start px-6 py-12 lg:px-8">
         <div class="flex flex-col justify-center gap-4">
             <h2 class="text-base text-center font-semibold leading-7 text-gray-900">Create a Short URL</h2>
