--- a/src/pages/admin.ejs
+++ b/src/pages/admin.ejs
@@ -10,6 +10,10 @@
     </style>
 </head>
 <body class="h-full">
+    <header>
+        <%- include('./partials/header'); %>
+    </header>
+    
     <div class="flex min-h-full flex-col justify-start px-6 py-12 lg:px-8">
         <div>
             <div class="flex justify-between">
