--- a/src/pages/dashboard.ejs
+++ b/src/pages/dashboard.ejs
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body class="h-full">
+    <header>
+        <%- include('./partials/header'); %>
+    </header>
+    
     <div class="flex min-h-full flex-col justify-start px-6 py-12 lg:px-8">
         <h1 class="text-2xl">You have <span class="text-indigo-600 font-bold"><%= totalUserUrls %> URLs</span>  and <span class="text-indigo-600 font-bold"><%= totalUserVisits %> visits</span></h1>
 
