--- a/src/pages/sign-in.ejs
+++ b/src/pages/sign-in.ejs
@@ -36,7 +36,7 @@
       
           <p class="mt-10 text-center text-sm text-gray-500">
             Not a member?
-            <a href="#" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Sign up</a>
+            <a href="/sign-up" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Sign up</a>
           </p>
         </div>
     </div>
