--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -14,7 +14,7 @@
     </header>
     <div class="flex min-h-full flex-col justify-start px-6 py-12 lg:px-8">
         <div class="flex flex-col justify-center gap-4">
-            <h2 class="text-base text-center font-semibold leading-7 text-gray-900">Create a Short URL</h2>
+            <h2 class="text-xl text-center font-semibold leading-7 text-gray-900">Create a Short URL</h2>
             <form id="new-url-form" action="/api/urls" method="POST" class="mt-4 w-full">
                 <div class="flex gap-2 flex-col justify-center lg:flex-row">
                     <input type="url" name="redirectUrl" id="url" required placeholder="Your long URL" class="w-full lg:w-80 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
@@ -34,7 +34,7 @@
         
 
         <div class="mt-20 flex flex-col justify-start gap-4">
-            <h2 class="text-base text-center font-semibold leading-7 text-gray-900">My Short URLs</h2>
+            <h2 class="text-xl text-center font-semibold leading-7 text-gray-900">My Short URLs</h2>
             <div id="urls_list" class="mt-4 grid xl:grid-cols-4 lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-4">
                 <% for (const url of urls) {%>
                     <div class="flex flex-col justify-between gap-3 bg-white shadow-md shadow-indigo-200 hover:shadow-indigo-300 hover:shadow-lg rounded-lg p-4">
